add boost button, new rotation system, collisions, cn

--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "@types/howler": "^2.2.12",
     "@types/matter-js": "^0.20.2",
     "gsap": "^3.13.0",
+    "postcss": "^8.5.6",
     "howler": "^2.2.4",
     "matter-js": "^0.20.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-flip-numbers": "^3.0.9",
+    "clsx": "^2.1.1",
+    "tailwind-merge": "^3.3.1",
     "react-router-dom": "^7.8.0",
     "stats.js": "^0.17.0",
     "tailwindcss": "^4.1.14",
