--- a/package.json
+++ b/package.json
@@ -27,16 +27,16 @@
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.14",
     "three": "^0.180.0",
-    "zustand": "^5.0.8"
-  },
-  "devDependencies": {
+    "zustand": "^5.0.8",
     "@eslint/js": "^9.33.0",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
     "@types/three": "^0.180.0",
     "@typescript-eslint/eslint-plugin": "^8.40.0",
     "@typescript-eslint/parser": "^8.40.0",
-    "@vitejs/plugin-react": "^5.0.0",
+    "@vitejs/plugin-react": "^5.0.0"
+  },
+  "devDependencies": {
     "axis-api": "https://Mathieu-a-un-grain-d243877b-d37e-4ed8-b3db-e8e68729dbbe@github.com/gobelins-axis/axis-api.git",
     "eslint": "^9.39.1",
     "eslint-config-prettier": "^10.1.8",
